* Fix position of map changer * Fix bug of layers list overflowing

--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-change-map/imagery-change-map.component.less
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-change-map/imagery-change-map.component.less
@@ -55,8 +55,8 @@
 		align-items: flex-start;
 		width: 250px;
 		height: 200px;
-		top: 0;
-		left: @margin;
+		bottom: -161px;
+		left: 70px;
 		background-color: @background-color-1;
 		overflow-y: auto;
 
